--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "web_rtc_presentation_demo",
   "version": "1.0.0",
   "description": "Web Real Time Communications",
+  "engines": {
+    "node": ">=0.12"
+  },
   "scripts": {
     "start": "node server.js"
   },
@@ -11,6 +14,6 @@
     "handlebars": "^4.0.11",
     "jquery": "^3.3.1",
     "semantic-ui-css": "^2.3.1",
-    "simplewebrtc": "^3.0.1"
+    "simplewebrtc": "3.0.2"
   }
 }
